# python-sendparcel-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/sendparcel_cli/: __init__.py  config.py  main.py  models.py  output.py
tests/: conftest.py  test_config.py  test_main.py  test_models.py  test_output.py
