[project]
name = "python-sendparcel-cli"
version = "0.1.0"
description = "Developer CLI for python-sendparcel provider testing and debugging."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Dominik Kozaczko", email = "dominik@kozaczko.info" }]
keywords = ["shipping", "parcel", "cli", "sendparcel", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "python-sendparcel>=0.1.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[project.scripts]
sendparcel = "sendparcel_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sendparcel_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["N818", "B027"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF012"]

[tool.coverage.run]
branch = true
source = ["sendparcel_cli"]

[tool.coverage.report]
show_missing = true

[tool.uv.sources]
python-sendparcel = { path = "../python-sendparcel", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
